--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
     <head><title>Fruit list</title></head>
     <body>
+    <h1>LIST OF FRITS</h1>
         There are {{ fruits | length }} types of fruits.
         <ul>
         {% for fruit in fruits %}
